Fixed nav spacing

--- a/css/main.css
+++ b/css/main.css
@@ -391,7 +391,6 @@ footer ul li:hover {
     text-decoration: none;
     list-style-type: none;
     color: #eee;
-    padding: 0.5em;
   }
 
   .matt-skinner {
